--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             return options[Math.floor(Math.random() * 3)];
         }
 
-        const play = (playerSelection, computerSelection) => {
+        const playRound = (playerSelection, computerSelection) => {
             let determineWinState = {
                 "rock": {"rock": "tie", "paper": "lose", "scissors": "win"},
                 "paper": {"rock": "win", "paper": "tie", "scissors": "lose"},
@@ -26,13 +26,25 @@
             }
 
             let determine = determineWinState[playerSelection][computerSelection]
-            return `You ${determine}! ${playerSelection} ${determine}s against ${computerSelection}`
+            console.log(`You ${determine}! ${playerSelection} ${determine}s against ${computerSelection}`)
+            return determine
         }
 
-        let playerSelection = prompt("Rock, paper, or scissors?").toLowerCase()
-        let computerSelection = computerPlay()
+        let playerWins = 0
+        let computerWins = 0
 
-        console.log(play(playerSelection, computerSelection))
+        for (let i=0; i<5; i++) {
+            let playerSelection = prompt("Rock, paper, or scissors?").toLowerCase()
+            let computerSelection = computerPlay()
+            let checkWin = playRound(playerSelection, computerSelection)
+            checkWin == "tie" ? null : (checkWin == "win" ? playerWins++ : computerWins++) 
+        }
+
+        console.log(playerWins==computerWins 
+            ? `You tie ${playerWins} games to ${computerWins}`
+            : (playerWins > computerWins 
+            ? `You win ${playerWins} games to ${computerWins}`
+            : `You lose ${playerWins} games to ${computerWins}`))
     </script>
 
 </head>
