Display hand animation and win message

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <ul>
-            <li>PLAYER SCORE: 0</li>
-            <li>COMPUTER SCORE: 0</li>
+            <li>PLAYER SCORE: <i id="player-score">0</i></li>
+            <li>COMPUTER SCORE: <i id="computer-score">0</i></li>
         </ul>
     </header>
     <div class="game-content message">
@@ -33,7 +33,7 @@
         <!--
             ROCK-PAPER-SCISSORS WIN MESSAGE
         -->
-        <h2 class="win-message">YOU WIN</h2>
+        <h2 class="win-message" id="win-msg">YOU WIN</h2>
         <h2 class="win-message" id="desc-message">PAPER BEATS ROCK</h2>
     </div>
 
