Complete game loop, restarting at five wins
Need refactoring

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         -->
         <h2 class="win-message" id="win-msg">YOU WIN</h2>
         <h2 class="win-message" id="desc-message">PAPER BEATS ROCK</h2>
+        <h2 class="win-message" id="click-message">click anywhere to continue</h2>
     </div>
 
     <!--
